syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.walmartlabs.concord.server.api.agent";
option java_outer_classname = "ServerProto";
option objc_class_prefix = "HLW";

package agent_api;

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

// SYSTEM

service TCommandQueue {

    rpc poll (TCommandRequest) returns (TCommandResponse) {}
}

message TCommandRequest {
    string agentId = 1;
}

message TCommandResponse {
    google.protobuf.Any command = 1;
}

message TCancelJobCommand {
    string instanceId = 1;
}

// JOB QUEUE

service TJobQueue {

    rpc poll (TJobRequest) returns (stream TJobResponse);
    rpc updateStatus (TJobStatusUpdate) returns (google.protobuf.Empty);
    rpc appendLog (TJobLogEntry) returns (google.protobuf.Empty);
    rpc uploadAttachments (TAttachments) returns (google.protobuf.Empty);
}

enum TJobType {
    RUNNER = 0;
    JAR = 1;
}

enum TJobStatus {
    RUNNING = 0;
    COMPLETED = 1;
    FAILED = 3;
    CANCELLED = 4;
}

message TJobRequest {
    string agentId = 1;
}

message TJobResponse {
    string instanceId = 1;
    TJobType type = 2;
    bytes chunk = 3;
}

message TJobStatusUpdate {
    string agentId = 1;
    string instanceId = 2;
    TJobStatus status = 3;
}

message TJobLogEntry {
    string instanceId = 1;
    bytes data = 2;
}

message TAttachments {
    string instanceId = 1;
    bytes data = 2;
}